# household-manager

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/schemas/: partners_schema.py  tasks_schema.py
tests/: conftest.py
